# ExynosTools

./: .gitignore  CHANGELOG.md  CHANGELOG_V3.0.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PACKAGING_FIXES.md  README.md  README_LAYER_ANDROID.md  RELEASE_NOTES_v1.3.0.md  VK_LAYER_EXYNOSTOOLS_bcn_fix.json  VkLayer_exynostools.json  VkLayer_exynostools.json.in  bcn_decoder.cpp  create_functional_binary.sh  create_package.sh  exports.map  exynostools_config.ini  meson.build  meta.json  vulkan_wrapper.cpp
.github/workflows/: build.yml  release.yml
assets/shaders/decode/: README.txt  bc7.comp.spv
assets/shaders/src/: bc4.comp  bc5.comp  bc_common.glsl
cmake/: Dependencies.cmake  GenerateEmbeddedSpirvHeader.cmake  bin2h.cmake  spirv.cmake
docs/: ANDROID_VALIDATION.md  SETUP.md  XCLIPSE_COMPAT_MATRIX.md
etc/exynostools/: performance_mode.conf
etc/exynostools/profiles/: dxvk.conf  example_game.conf
include/bcn_decoder/: bcn_config.h  bcn_decoder.h  bcn_types.h
package_temp/etc/exynostools/profiles/: some_game.conf  vkd3d.conf
package_temp/usr/share/: meta.json
profiles/winlator/: dxvk.env  vkd3d.env
scripts/: bootstrap_submodules.ps1  build_and_package.sh  configure_android_local_repos.ps1  package_driver_release.ps1
shaders/: bc5_decode.comp  bc6.comp  bc6_iv.comp  bc7.comp  bc7_decode.comp  bc7_iv.comp  copy_image_iv.comp  mipmap_shader.comp  rgtc.comp  rgtc_iv.comp  s3tc.comp  s3tc_iv.comp
shaders/include/: rgtc.h
src/: app_profile.c  app_profile.h  bc_emulate.c  bc_emulate.h  detect.c  detect.h  features_patch.c  features_patch.h  hud.c  hud.h  logging.h  minimal_wrapper.c  perf_conf.c  perf_conf.h  xclipse_wrapper.c  xeno_wrapper.c
src/compute/: bc5_decoder.cpp  bc5_decoder.h  bc7_decoder.cpp  bc7_decoder.h  compute_pipeline.cpp  compute_pipeline.h
src/core/: decoder_context.cpp  format_support.cpp  format_support.h  vulkan_bridge.cpp  vulkan_hook.h  xclipse_extensions.h
src/layer/: layer_entry.cpp
src/layer_c/: ext_emulation.c  ext_emulation.h  exynostools_bcn_dispatch.c  exynostools_bcn_dispatch.h  exynostools_config.c  exynostools_config.h  exynostools_hashmap.c  exynostools_hashmap.h  exynostools_layer.c  exynostools_layer.h  micro_vma.c  micro_vma.h  mipmap.c  mipmap.h  pipeline_cache.c  pipeline_cache.h  pool_usage_example.c  query_interceptor.c  query_interceptor.h  spirv_patcher.c  spirv_patcher.h  staging_pool.c  staging_pool.h  tfb_emulator.c  tfb_emulator.h  watchdog.c  watchdog.h
src/memory/: staging_buffer_pool.cpp  staging_buffer_pool.h  texture_cache.cpp  texture_cache.h
src/native/: native_upload.cpp  native_upload.h
src/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_image.cpp  vk_image.h  vk_utils.cpp  vk_utils.h
tests/: test_format_support.cpp
usr/share/: meta.json
